Site overflow correction

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ a {
   color: black;
 }
 
+h2 {
+  max-width: 100%;
+}
+
 input::placeholder {
   color: #4a4a4a;
   font-size: 17px;
